_build/_log
### Starting build.
# Target: test.ml.depends, tags: { debug, extension:ml, file:test.ml, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules test.ml > test.ml.depends
# Target: deck.mli.depends, tags: { debug, extension:mli, file:deck.mli, ocaml, ocamldep, quiet, traverse }
ocamlfind ocamldep -modules deck.mli > deck.mli.depends # cached
# Target: deck.cmi, tags: { byte, compile, debug, extension:mli, file:deck.mli, interf, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o deck.cmi deck.mli
# Target: test.cmo, tags: { byte, compile, debug, extension:cmo, extension:ml, file:test.cmo, file:test.ml, implem, ocaml, quiet, traverse }
ocamlfind ocamlc -c -g -o test.cmo test.ml
+ ocamlfind ocamlc -c -g -o test.cmo test.ml
File "test.ml", line 1, characters 5-11:
1 | open OUnit2
         ^^^^^^
Error: Unbound module OUnit2
Hint: Did you mean Unit?
Command exited with code 2.
# Compilation unsuccessful.
